--- a/portfolio/style/main.css
+++ b/portfolio/style/main.css
@@ -1,19 +1,38 @@
-html{background-color:orange;
-text-align: center;}
+html{background-color: orange; text-align: center;}
 h1{color:black;text-shadow: 2px 2px 5px white;
 text-align: center;}
 h2{color:black;text-shadow: 2px 2px 5px white;
 text-align: center;}
-p {color:black}
-b {color:black;}
+p {color:black;}
+b {color:black; flex-direction: row;}
 h3 {color:black;text-shadow: 2px 2px 5px blue;
 text-align: center;}
-.container {width: 80%; margin:0 auto;}
-.logo {float:left; padding: 10px 0;}
-nav {float: right;}
-nav ul {margin:0; padding: 0; list-style: none;}
-nav li {display: inline-block; margin-left: 100px; padding-top: 25px; position: relative;}
+.input {font-family: 'Quicksand', sans-serif;}
+.container {width: 100%; margin:0;}
+nav {float: center;}
+nav ul {margin:0; padding: 5px; list-style: none;}
+nav li {display: inline-block; margin-left: 45px; padding-top: 5px; margin-right: 45px; margin-bottom: 10px; position: relative; flex-direction: row;}
 nav a {text-decoration: none; text-transform: uppercase; font-size: 24px;}
 nav a:hover {color: black;}
 nav a::before {content: ""; display: block; height: 5px; width: 100%; background-color: black; position: absolute; top: 0; width: 0%;}
 nav a:hover::before {width: 100%;}
+.row {
+  display: flex;
+}
+.row1 {
+  display: flex;
+}
+.row2 {
+  display: flex;
+}
+.row3 {
+  display: flex;
+}
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
+.grad {
+  background-image: linear-gradient(to right, red,orange,red);
+}
